--- a/src/app/[lang]/(dashboard)/(private)/talk-right/dashboard/components/styles.css
+++ b/src/app/[lang]/(dashboard)/(private)/talk-right/dashboard/components/styles.css
@@ -5,3 +5,15 @@
   padding-block: 4px;
   padding-inline: 16px;
 }
+.MuiPaper-root{
+  height: 100%;
+}
+
+
+@media only screen and (max-width: 1340px) {
+  .remaining-btn{
+    font-size: 12px;
+    padding: 5px 10px;
+  }
+}
+
