--- a/src/app/[lang]/(dashboard)/(private)/talk-right/dashboard/components/styles.css
+++ b/src/app/[lang]/(dashboard)/(private)/talk-right/dashboard/components/styles.css
@@ -16,4 +16,10 @@
     padding: 5px 10px;
   }
 }
+@media only screen and (max-width: 1280px) {
+  .responsive-text{
+    font-size: 11px;
+    padding: 0px !important;
+  }
+}
 
